secondfile/objects/DHStatus_Contract_Details__c.object
<CustomObject>
    <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-Billing Update Details-DHStatus-Contract Details</description>
    <fields>
        <fullName>Contract_Number__c</fullName>
        <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-Billing Update Details-DHStatus-Contract Details-Contract Number</description>
        <label>Contract Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DHStatus_Billing_Update_Details__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-Billing Update Details-DHStatus-Contract Details-DHStatus-Billing Update Details</description>
        <label>DHStatus-Billing Update Details</label>
        <referenceTo>DHStatus_Billing_Update_Details__c</referenceTo>
        <relationshipLabel>DHStatus-Contract Details</relationshipLabel>
        <relationshipName>DHStatus_Contract_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-Billing Update Details-DHStatus-Contract Details-End Date</description>
        <label>End Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Contract_Number__c</fullName>
        <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-Billing Update Details-DHStatus-Contract Details-Old Contract Number</description>
        <label>Old Contract Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-Billing Update Details-DHStatus-Contract Details-Start Date</description>
        <label>Start Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-Billing Update Details-DHStatus-Contract Details-Term</description>
        <label>Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DHStatus-Contract Details</label>
    <nameField>
        <displayFormat>CD-{00000}</displayFormat>
        <label>DHStatus-Contract Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DHStatus-Contract Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>